# libreaward

./: CMakeLists.txt  README.md  award_exports.h  bios.cpp  bios.h  lzh.cpp  lzh.h  main.cpp  memicmp.h  types.h
.github/workflows/: cmake-multi-platform.yml
lzhEngine/: huf.cpp  lzhEngine.h  maketbl.cpp
